<resources>
    <string name="app_name">Workout Timer</string>
    <string name="title_home">Timer</string>
    <string name="title_settings">Settings</string>
    <string name="title_about">About Us</string>
    <string name="info">We are working hard to improve the app and create a better experience for you. Please help us by sharing your valuable feedback and introducing the app to your friends. Once we reach 2000 users, we will add the feature to create back-to-back workout sequences.

Our goal is to keep the app free, and this is only possible with your support. You can support us by pressing the button below to give us a 5-star review on the Play Store or by donating through the other button. Thank you for being with us!</string>
    <string name="fire">Fire</string>
    <string name="ok">OK</string>
    <string name="_00Time">00:00</string>
    <string name="close">Close</string>
    <string name="work_1_3_test">Work 1 of 3 Test</string>
    <string name="_00_30_test">00:30</string>
    <string name="great_work">Great work !</string>
    <string name="total_workout">TOTAL WORKOUT</string>
    <string name="total_rest">TOTAL REST</string>
    <string name="how_was_your_workout">How was your workout?</string>
    <string name="hard">Hard</string>
    <string name="good">Good</string>
    <string name="easy">Easy</string>
    <string name="_0">0</string>
    <string name="workouts">Workouts</string>
    <string name="minutes_workout">Minutes Workout</string>
    <string name="minutes_rest">Minutes Rest</string>
    <string name="set">SET</string>
    <string name="mins">–</string>
    <string name="_1">1</string>
    <string name="plus">+</string>
    <string name="work">WORK</string>
    <string name="skip_last_rest">Skip last rest</string>
    <string name="start_workout">Start workout</string>
    <string name="playicon">playIcon</string>
    <string name="create_multi_exercise_workout">Create multi exercise workout</string>
    <string name="rest">REST</string>
    <string name="history">History</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="alert">Alert !</string>
    <string name="workout_at_10_41_am">Workout at 10:41 AM</string>
    <string name="_3m_30s">3m 30s</string>
    <string name="exercises_1">Exercises: 1</string>
    <string name="dots">dots</string>
    <string name="rate">rate</string>
    <string name="workout_timer">Workout Timer</string>
    <string name="rate_us">Rate Us</string>
    <string name="send_feedback">Send Feedback</string>
    <string name="donate_paypal">Donate (PayPal)</string>
    <string name="general">General</string>
    <string name="vibration">Vibration</string>
    <string name="workout">Workout</string>
    <string name="prepare_time">Prepare Time</string>
    <string name="time">Time</string>
    <string name="sec">sec</string>
    <string name="sound">Sound</string>
</resources>